Fix uneven spacing

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,7 +8,3 @@ body {
   background-color: Variables.$surfaceColor;
   color: Variables.$onSurfaceColor;
 }
-
-#root {
-  min-height: 100vh;
-}
